--- a/_includes/scripts.html
+++ b/_includes/scripts.html
@@ -24,5 +24,11 @@
   {%- endcase -%}
 {% endif %}
 
+{% if page.mathjax %}
+<script type="text/javascript" async
+  src="https://cdn.mathjax.org/mathjax/latest/MathJax.js?config=TeX-MML-AM_CHTML">
+</script>
+{% endif %}
+
 {% include analytics.html %}
 {% include /comments-providers/scripts.html %}
