--- a/_sass/minimal-mistakes/_page.scss
+++ b/_sass/minimal-mistakes/_page.scss
@@ -182,8 +182,8 @@
 }
 
 .page__hero-image {
-  max-width: 100%;
-  height: auto;
+  width: auto;
+  height: 100%;
   -ms-interpolation-mode: bicubic;
 }
 
