--- a/_sass/minimal-mistakes/_page.scss
+++ b/_sass/minimal-mistakes/_page.scss
@@ -186,8 +186,8 @@
   top: 50%;
   left: 50%;
   transform: translate(-50%, -50%);
-  width: auto;
-  height: 100%;
+  max-width: 100%;
+  height: auto;
   -ms-interpolation-mode: bicubic;
 }
 
