--- a/_sass/minimal-mistakes/_page.scss
+++ b/_sass/minimal-mistakes/_page.scss
@@ -183,12 +183,12 @@
 
 .page__hero-image {
   position: absolute;
+  max-width: 100%;
+  height: auto;
   top: 50%;
   left: 50%;
   transform: translate(-50%, -50%);
-  max-width: 100%;
-  height: auto;
-  -ms-interpolation-mode: bicubic;
+  //-ms-interpolation-mode: bicubic;
 }
 
 .page__hero-caption {
