--- a/_sass/minimal-mistakes/_page.scss
+++ b/_sass/minimal-mistakes/_page.scss
@@ -183,8 +183,8 @@
 
 .page__hero-image {
   position: absolute;
-  max-width: 100%;
-  height: auto;
+  width: auto;
+  max-height: 100%;
   top: 50%;
   left: 50%;
   transform: translate(-50%, -50%);
