--- a/_sass/minimal-mistakes/_page.scss
+++ b/_sass/minimal-mistakes/_page.scss
@@ -184,10 +184,7 @@
 .page__hero-image {
   width: auto;
   max-height: 100%;
-  top: 50%;
-  left: 50%;
-  transform: translate(-50%, -50%);
-  //-ms-interpolation-mode: bicubic;
+  -ms-interpolation-mode: bicubic;
 }
 
 .page__hero-caption {
