--- a/_sass/minimal-mistakes/_page.scss
+++ b/_sass/minimal-mistakes/_page.scss
@@ -182,8 +182,8 @@
 }
 
 .page__hero-image {
-  width: auto;
-  height: 100%;
+  max-width: 100%;
+  height: auto;
   -ms-interpolation-mode: bicubic;
 }
 
