--- a/_sass/minimal-mistakes/_page.scss
+++ b/_sass/minimal-mistakes/_page.scss
@@ -182,8 +182,10 @@
 }
 
 .page__hero-image {
-  width: 50%;
-  height: 50%;
+  width: auto;
+  height: 100%;
+  top: 50%;
+  left: 50%;
   -ms-interpolation-mode: bicubic;
 }
 
