--- a/_sass/minimal-mistakes/_page.scss
+++ b/_sass/minimal-mistakes/_page.scss
@@ -183,10 +183,10 @@
 
 .page__hero-image {
   position: absolute;
-  width: auto;
-  height: 100%;
   top: 50%;
   left: 50%;
+  //width: auto;
+  //height: 100%;
   -ms-interpolation-mode: bicubic;
 }
 
