--- a/_sass/minimal-mistakes/_page.scss
+++ b/_sass/minimal-mistakes/_page.scss
@@ -185,6 +185,7 @@
   position: absolute;
   top: 50%;
   left: 50%;
+  transform: translate(-50%,-50%);
   //width: auto;
   //height: 100%;
   -ms-interpolation-mode: bicubic;
