--- a/_sass/minimal-mistakes/_page.scss
+++ b/_sass/minimal-mistakes/_page.scss
@@ -182,12 +182,8 @@
 }
 
 .page__hero-image {
-  position: absolute;
-  top: 50%;
-  left: 50%;
-  transform: translate(-50%,-50%);
-  //width: auto;
-  //height: 100%;
+  width: auto;
+  height: 100%;
   -ms-interpolation-mode: bicubic;
 }
 
