--- a/_sass/minimal-mistakes/_page.scss
+++ b/_sass/minimal-mistakes/_page.scss
@@ -182,9 +182,8 @@
 }
 
 .page__hero-image {
-  vertical-align: middle;
-  width: auto;
-  height: 100%;
+  width: 100%;
+  height: auto;
   -ms-interpolation-mode: bicubic;
 }
 
