--- a/_sass/minimal-mistakes/_page.scss
+++ b/_sass/minimal-mistakes/_page.scss
@@ -182,8 +182,11 @@
 }
 
 .page__hero-image {
+  display: block;
   width: 100%;
   height: auto;
+  margin-left: 50%;
+  margin-right: 50%;
   -ms-interpolation-mode: bicubic;
 }
 
