--- a/_sass/minimal-mistakes/_page.scss
+++ b/_sass/minimal-mistakes/_page.scss
@@ -185,8 +185,8 @@
   display: block;
   width: 100%;
   height: auto;
-  margin-left: 50%;
-  margin-right: 50%;
+  margin-left: auto;
+  margin-right: auto;
   -ms-interpolation-mode: bicubic;
 }
 
